# DungeonsAndApps

./: .editorconfig  .env.example  .gitignore  AGENTS.md  CLAUDE.md  COMBAT_AUDIT.md  COMBAT_AUDIT_20260622.md  COMBAT_AUDIT_2026_06_16.md  COMBAT_AUDIT_2026_06_17.md  COMBAT_AUDIT_2026_06_17_PASS2.md  DEPLOY_AUDIT.md  DND_AUTOMATION_GAPS.md  Dockerfile.prod  FEATURE_AUDIT.md  FIRST_BOOT.md  MISSING_FEATURES_AUDIT.md  README.md  SECURITY_AUDIT.md  TEST_AUDIT_RESUME.md  TEST_GAPS.md  docker-compose.prod.yml  docker-compose.yml  skills-lock.json
backend/: .env.example  Cargo.toml
backend/examples/: hash.rs
backend/src/: auth.rs  combat_engine.rs  config.rs  db.rs  dice.rs  error.rs  extract.rs  lib.rs  main.rs  rate_limit.rs  rbac.rs  retention.rs  state.rs  ws.rs
backend/src/combat_engine/: load.rs  mod.rs  resolvers.rs  stats.rs  types.rs
backend/src/combat_engine/resolvers/: attack.rs  damage.rs  damage_type.rs  death_save.rs  heal.rs  mod.rs  polearm.rs  save.rs  skill_check.rs  two_weapon_fight.rs  types.rs
backend/src/combat_engine/stats/: abilities.rs  ac.rs  compute.rs  hp.rs  mod.rs  weapon.rs
backend/src/routes/: admin.rs  auth.rs  campaigns.rs  characters.rs  combat.rs  dice.rs  effects.rs  group.rs  health.rs  invitations.rs  maps.rs  messages.rs  mod.rs  notifications.rs  recap.rs  spells.rs  uploads.rs  users.rs  world.rs  ws_events.rs
backend/src/routes/combat/: actions.rs  combatants.rs  encounters.rs  events.rs  helpers.rs  mod.rs  notifications.rs  special.rs  spells.rs  tactical.rs  tick.rs
backend/tests/: admin.rs  auth.rs  campaigns_advanced.rs  characters.rs  characters_advanced.rs  combat_advanced.rs  combat_coverage_jun2026.rs  combat_engine_advanced.rs  combat_engine_unit.rs  combat_full_integration.rs  combat_integration.rs  combat_movement.rs  dice.rs  e2e.rs  edge_cases.rs  effects.rs  helpers.rs  messages.rs  messages_advanced.rs  more_gaps.rs  notifications.rs  quests_loot.rs  uploads.rs  users.rs  world.rs  world_content.rs  ws_tests.rs
(+297 files in other folders)
